Adding Disqus widget for comments and continued drafting first post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/styles.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/pygment_trac.css" media="screen" />
 
+    <script src="https://use.fontawesome.com/0896bc2c3f.js"></script>
+
     <title> {{ page.title }} | {{ site.name }} </title>
   </head>
 
@@ -51,8 +53,11 @@
             <img class="card-img-top" src="{{ site.baseurl }}/images/jharrisonau-headshot-673.jpg" alt="James Harrison">
             <div class="card-block">
               <h4 class="card-title">James Harrison</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">
+                <small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card's content.</small>
+              </p>
+              <a href="#" class="card-link"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a><br />
+              <a href="#" class="card-link"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
             </div>
           </div>
         </aside>
